--- a/index.html
+++ b/index.html
@@ -92,10 +92,16 @@
                 <i class='bx bxl-tailwind-css' ></i>
             </div>
             <div class="item">
-                <i class='bx bxl-python' ></i>
+                <i class='bx bxl-bootstrap'></i>
             </div>
             <div class="item">
                 <i class='bx bxl-git'></i>
+            </div>
+            <div class="item">
+                <i class='bx bxl-react'></i>
+            </div>
+            <div class="item">
+                <i class='bx bxl-python'></i>
             </div>
         </div>
     </div>
