--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <h2>Musyaravul Anam</h2>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="index.html">Skills</a></li>
-            <li><a href="index.html">Project</a></li>
-            <li><a href="index.html">Contact</a></li>
+            <li><a href="others/html/sertif.html">Certification</a></li>
+            <li><a href="others/html/projek.html">Project</a></li>
+            <li><a href="others/html/kontak.html">Contact</a></li>
         </ul>
         <button class="rekrut">Rekrut Saya</button>
     </div>
@@ -24,7 +24,7 @@
     <div class="main">
         <h4>Hallo, Aku <span>Musyaravul Anam</span> 👋🏼</h4>
         <p class="keahlian">Seorang Junior Frontend Developer</p>
-        <p class="desc">Aku seorang pelajar S1 di UIN WAlisongo Semarang prodi Teknologi Informasi.</p>
+        <p class="desc">Aku seorang pelajar S1 di Walisongo State Islamic University prodi Teknologi Informasi.</p>
         <img src="images/sans-logo.png" alt="sans-logo">
     </div>
 
@@ -58,8 +58,7 @@
         <div class="info">
             <h3>Tentang Diriku</h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate optio fugiat praesentium obcaecati quis autem libero deleniti at, illum aliquid quam accusantium debitis quos provident, unde nisi, expedita saepe iste!
-                Earum libero soluta eos quibusdam quasi natus commodi culpa? Rem quaerat eaque dolore blanditiis ullam. Dignissimos ipsa at saepe nam amet ipsam minus impedit quasi obcaecati facere. Reprehenderit, aut in.
+                Aku adalah seorang mahasiswa S1 dari Walisongo State Islamic University prodi Teknologi informasi yang menyelami bidang Pengembangan Web.
             </p>
             <button class="rekrut">Rekrut Saya</button>
         </div>
@@ -67,12 +66,12 @@
 
     <h5 class="batas">Skill-ku</h5>
 
-    <div class="skill">
+    <div class="skill" id="skill">
         <div class="kiri">
             <div class="info">
                 <h3>Apa saja skill yang kumiliki?</h3>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius eos deserunt est dolorem! Possimus nam eos officia voluptas ducimus suscipit incidunt nesciunt nobis aliquid, accusantium magni autem delectus in sapiente.
+                    Aku sering membuat website dengan user interface yang simple, sederhana, dan responsif agar user dapat menemukan apa yang dibutuhkan dengan cepat dan tak membuang waktu yang berharga.
                 </p>
             </div>
             <button class="rekrut">Rekrut Saya</button>
@@ -121,10 +120,10 @@
 
             <div class="col-link">
                 <h4>Useful Links</h4>
-                <a href="#">Home</a>
-                <a href="#">Skills</a>
-                <a href="#">Project</a>
-                <a href="#">Contact</a>
+                <a href="index.html">Home</a>
+                <a href="/others/html/sertif.html">Certification</a>
+                <a href="/others/html/projek.html">Project</a>
+                <a href="/others/html/kontak.html">Contact</a>
             </div>
             
             <div class="col-link">
