memasukkan beberapa tambahan

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="images/sans-logo.png">
-    <link rel="icon" href="images/sans-logo.png" type="image/png"> 
+    <meta property="og:image" content="/images/sans-logo.png">
+    <link rel="icon" href="/images/sans-logo.png" type="image/png"> 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
     <title>Simple Portfolio</title>
@@ -24,7 +24,7 @@
     <div class="main">
         <h4>Hallo, Aku <span>Musyaravul Anam</span> 👋🏼</h4>
         <p class="keahlian">Seorang Junior Frontend Developer</p>
-        <p class="desc">Aku seorang pelajar S1 di Walisongo State Islamic University prodi Teknologi Informasi.</p>
+        <p class="desc">Mahasiswa S1 di Walisongo State Islamic University Prodi Teknologi Informasi</p>
         <img src="images/sans-logo.png" alt="sans-logo">
     </div>
 
@@ -58,7 +58,7 @@
         <div class="info">
             <h3>Tentang Diriku</h3>
             <p>
-                Aku adalah seorang mahasiswa S1 dari Walisongo State Islamic University prodi Teknologi informasi yang menyelami bidang Pengembangan Web.
+                Aku adalah seorang mahasiswa S1 dari Universitas Islam Negeri Walisongo dengan prodi teknologi informasi yang menyelami bidang Pengembangan Web.
             </p>
             <button class="rekrut">Rekrut Saya</button>
         </div>
