--- a/others/html/kontak.html
+++ b/others/html/kontak.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="/images/sans-logo.png">
-    <link rel="icon" href="images/sans-logo.png" type="image/png"> 
+    <link rel="icon" href="/images/sans-logo.png" type="image/png"> 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="/others/css/main.css">
+    <link rel="stylesheet" href="/others/css/kontak.css">
     <title>Document</title>
 </head>
 <body>
@@ -19,6 +20,15 @@
             <li><a href="/others/html/kontak.html">Contact</a></li>
         </ul>
         <button class="rekrut">Rekrut Saya</button>
+    </div>
+
+    <div class="main">
+        <div class="foto-profile">
+        </div>
+    </div>
+
+    <div class="Maintenance">
+        <h1>Sorry, this page currently under <span>Maintenance</span>.</h1>
     </div>
 
     <footer>
