--- a/others/html/projek.html
+++ b/others/html/projek.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="/images/sans-logo.png">
-    <link rel="icon" href="images/sans-logo.png" type="image/png"> 
+    <link rel="icon" href="/images/sans-logo.png" type="image/png"> 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="/others/css/main.css">
+    <link rel="stylesheet" href="/others/css/projek.css">
     <title>Document</title>
 </head>
 <body>
@@ -20,6 +21,69 @@
         </ul>
         <button class="rekrut">Rekrut Saya</button>
     </div>
+
+    <section class="projek">
+        <div class="projek__header">
+            <h3>Projek</h3>
+            <p>Berikut adalah beberapa projek yang pernah saya buat.</p>
+        </div>
+
+        <div class="projek__list">
+            <section class="kategori">
+                <div class="kategori__projek">
+                    <div class="kartu-projek">
+                        <img src="/others/assets/chess/chess-img.png" alt="Catur" class="kartu-projek__img">
+                        <div class="kartu-projek__info">
+                            <h5>Chess</h5>
+                        </div>
+                        <p class="kartu-projek__desc">Projek permainan catur melawan bot.</p>
+                        <a href="/others/assets/chess/index.html">
+                            <button class="btn">Coba</button>
+                        </a>
+                    </div>
+                    <div class="kartu-projek">
+                        <img src="/others/assets/weather/weather-img.png" alt="Cuaca" class="kartu-projek__img">
+                        <div class="kartu-projek__info">
+                            <h5>Weather App</h5>
+                        </div>
+                        <p class="kartu-projek__desc">Aplikasi cuaca yang disederhanakan.</p>
+                        <a href="/others/assets/weather/index.html">
+                            <button class="btn">Coba</button>
+                        </a>
+                    </div>
+                    <div class="kartu-projek">
+                        <img src="/others/assets/text-encrypt/encrypt-img.png" alt="Encryptor" class="kartu-projek__img">
+                        <div class="kartu-projek__info">
+                            <h5>Encryptor Text</h5>
+                        </div>
+                        <p class="kartu-projek__desc">Website untuk mengubah kalimat menjadi kode rahasia.</p>
+                        <a href="/others/assets/text-encrypt/index.html">
+                            <button class="btn">Coba</button>
+                        </a>
+                    </div>
+                    <div class="kartu-projek">
+                        <img src="/others/assets/url-shortner/shortner-img.png" alt="Shortner" class="kartu-projek__img">
+                        <div class="kartu-projek__info">
+                            <h5>URL Shortner</h5>
+                        </div>
+                        <p class="kartu-projek__desc">Mengubah link yang panjang menjadi lebih pendek.</p>
+                        <a href="/others/assets/url-shortner/index.html">
+                            <button class="btn">Coba</button>
+                        </a>
+                    </div>
+                    <div class="kartu-projek soon">
+                        <div class="kartu-projek__info">
+                            <h5>Coming Soon</h5>
+                        </div>
+                        <p class="kartu-projek__desc">Nantikan projek lainnya dariku</p>
+                        <a href="#">
+                            <button class="btn">Coming Soon</button>
+                        </a>
+                    </div>
+                </div>
+            </section>
+        </div>
+     </section>
 
     <footer>
         <div class="mulai">
