--- a/others/html/sertif.html
+++ b/others/html/sertif.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="/images/sans-logo.png">
-    <link rel="icon" href="images/sans-logo.png" type="image/png"> 
+    <link rel="icon" href="/images/sans-logo.png" type="image/png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="/others/css/main.css">
+    <link rel="stylesheet" href="/others/css/sertif.css">
     <title>Document</title>
 </head>
 <body>
@@ -20,6 +21,43 @@
         </ul>
         <button class="rekrut">Rekrut Saya</button>
     </div>
+
+    <section class="sertif">
+        <div class="sertif__header">
+            <h3>Certification</h3>
+            <p>Berikut adalah beberapa sertifikat yang pernah saya dapatkan.</p>
+        </div>
+
+        <div class="sertif__list">
+            <section class="kategori">
+                <div class="kategori__sertif">
+                    <div class="kartu-sertif">
+                        <img src="/others/assets/images/certificate-DQLABINTP1EFWEML_page-0001.jpg" alt="Catur" class="kartu-sertif__img">
+                        <div class="kartu-sertif__info">
+                            <h5>Python Fundamental for Data Science</h5>
+                        </div>
+                        <p class="kartu-sertif__desc">Free class data science yang diselenggarakan oleh <strong>DQLab</strong>.</p>
+                    </div>
+
+                    <div class="kartu-sertif">
+                        <img src="/others/assets/images/MUSYARAVUL ANAM_E-Certificate Figma Training_page-0001.jpg" alt="Cuaca" class="kartu-sertif__img">
+                        <div class="kartu-sertif__info">
+                            <h5>Basic and Fundamental UI/UX using Figma</h5>
+                        </div>
+                        <p class="kartu-sertif__desc">Webinar yang mempelajari basic dari UI/UX yang diselenggarakan oleh <strong>Dentech Corp</strong>.</p>
+                    </div>
+
+                    <div class="kartu-sertif">
+                        <img src="/others/assets/images/MUSYARAVUL ANAM_Sertifikat LinuxHackingId_page-0001.jpg" alt="Encryptor" class="kartu-sertif__img">
+                        <div class="kartu-sertif__info">
+                            <h5>Basic Osint Techniques for Beginners</h5>
+                        </div>
+                        <p class="kartu-sertif__desc">Webinar yang mempelajari basic Osint yang diselenggarakan oleh <strong>LinuxHackingId</strong>.</p>
+                    </div>
+                </div>
+            </section>
+        </div>
+     </section>
 
     <footer>
         <div class="mulai">
