--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
             <div class="col-link">
                 <h4>Useful Links</h4>
                 <a href="index.html">Home</a>
-                <a href="/others/html/sertif.html">Certification</a>
-                <a href="/others/html/projek.html">Project</a>
-                <a href="/others/html/kontak.html">Contact</a>
+                <a href="others/html/sertif.html">Certification</a>
+                <a href="others/html/projek.html">Project</a>
+                <a href="others/html/kontak.html">Contact</a>
             </div>
             
             <div class="col-link">
