Changes to be committed: 	modified:   index.html 	modified:   others/css/kontak.css 	modified:   others/html/kontak.html 	modified:   others/html/projek.html 	modified:   others/html/sertif.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="/images/sans-logo.png">
-    <link rel="icon" href="/images/sans-logo.png" type="image/png"> 
+    <meta property="og:image" content="images/sans-logo.png">
+    <link rel="icon" href="images/sans-logo.png" type="image/png"> 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
     <title>Simple Portfolio</title>
@@ -121,9 +121,9 @@
             <div class="col-link">
                 <h4>Useful Links</h4>
                 <a href="index.html">Home</a>
-                <a href="/others/html/sertif.html">Certification</a>
-                <a href="/others/html/projek.html">Project</a>
-                <a href="/others/html/kontak.html">Contact</a>
+                <a href="others/html/sertif.html">Certification</a>
+                <a href="others/html/projek.html">Project</a>
+                <a href="others/html/kontak.html">Contact</a>
             </div>
             
             <div class="col-link">
