--- a/others/html/sertif.html
+++ b/others/html/sertif.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="/images/sans-logo.png">
-    <link rel="icon" href="/images/sans-logo.png" type="image/png">
+    <meta property="og:image" content="../images/sans-logo.png">
+    <link rel="icon" href="../images/sans-logo.png" type="image/png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/others/css/main.css">
-    <link rel="stylesheet" href="/others/css/sertif.css">
+    <link rel="stylesheet" href="../others/css/main.css">
+    <link rel="stylesheet" href="../others/css/sertif.css">
     <title>Document</title>
 </head>
 <body>
     <div class="navbar">
         <h2>Musyaravul Anam</h2>
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/others/html/sertif.html">Certification</a></li>
-            <li><a href="/others/html/projek.html">Project</a></li>
-            <li><a href="/others/html/kontak.html">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../others/html/sertif.html">Certification</a></li>
+            <li><a href="../others/html/projek.html">Project</a></li>
+            <li><a href="../others/html/kontak.html">Contact</a></li>
         </ul>
         <button class="rekrut">Rekrut Saya</button>
     </div>
@@ -32,7 +32,7 @@
             <section class="kategori">
                 <div class="kategori__sertif">
                     <div class="kartu-sertif">
-                        <img src="/others/assets/images/certificate-DQLABINTP1EFWEML_page-0001.jpg" alt="Catur" class="kartu-sertif__img">
+                        <img src="../others/assets/images/certificate-DQLABINTP1EFWEML_page-0001.jpg" alt="Python" class="kartu-sertif__img">
                         <div class="kartu-sertif__info">
                             <h5>Python Fundamental for Data Science</h5>
                         </div>
@@ -40,7 +40,7 @@
                     </div>
 
                     <div class="kartu-sertif">
-                        <img src="/others/assets/images/MUSYARAVUL ANAM_E-Certificate Figma Training_page-0001.jpg" alt="Cuaca" class="kartu-sertif__img">
+                        <img src="../others/assets/images/MUSYARAVUL ANAM_E-Certificate Figma Training_page-0001.jpg" alt="Figma" class="kartu-sertif__img">
                         <div class="kartu-sertif__info">
                             <h5>Basic and Fundamental UI/UX using Figma</h5>
                         </div>
@@ -48,7 +48,7 @@
                     </div>
 
                     <div class="kartu-sertif">
-                        <img src="/others/assets/images/MUSYARAVUL ANAM_Sertifikat LinuxHackingId_page-0001.jpg" alt="Encryptor" class="kartu-sertif__img">
+                        <img src="../others/assets/images/MUSYARAVUL ANAM_Sertifikat LinuxHackingId_page-0001.jpg" alt="Osint" class="kartu-sertif__img">
                         <div class="kartu-sertif__info">
                             <h5>Basic Osint Techniques for Beginners</h5>
                         </div>
@@ -74,10 +74,10 @@
 
             <div class="col-link">
                 <h4>Useful Links</h4>
-                <a href="/index.html">Home</a>
-                <a href="/others/html/sertif.html">Certification</a>
-                <a href="/others/html/projek.html">Project</a>
-                <a href="/others/html/kontak.html">Contact</a>
+                <a href="../index.html">Home</a>
+                <a href="../others/html/sertif.html">Certification</a>
+                <a href="../others/html/projek.html">Project</a>
+                <a href="../others/html/kontak.html">Contact</a>
             </div>
             
             <div class="col-link">
