--- a/others/html/kontak.html
+++ b/others/html/kontak.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="/images/sans-logo.png">
-    <link rel="icon" href="/images/sans-logo.png" type="image/png"> 
+    <meta property="og:image" content="../images/sans-logo.png">
+    <link rel="icon" href="../images/sans-logo.png" type="image/png"> 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/others/css/main.css">
-    <link rel="stylesheet" href="/others/css/kontak.css">
+    <link rel="stylesheet" href="../others/css/main.css">
+    <link rel="stylesheet" href="../others/css/kontak.css">
     <title>Document</title>
 </head>
 <body>
     <div class="navbar">
         <h2>Musyaravul Anam</h2>
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/others/html/sertif.html">Certification</a></li>
-            <li><a href="/others/html/projek.html">Project</a></li>
-            <li><a href="/others/html/kontak.html">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../others/html/sertif.html">Certification</a></li>
+            <li><a href="../others/html/projek.html">Project</a></li>
+            <li><a href="../others/html/kontak.html">Contact</a></li>
         </ul>
         <button class="rekrut">Rekrut Saya</button>
     </div>
@@ -46,10 +46,10 @@
 
             <div class="col-link">
                 <h4>Useful Links</h4>
-                <a href="/index.html">Home</a>
-                <a href="/others/html/sertif.html">Certification</a>
-                <a href="/others/html/projek.html">Project</a>
-                <a href="/others/html/kontak.html">Contact</a>
+                <a href="../index.html">Home</a>
+                <a href="../others/html/sertif.html">Certification</a>
+                <a href="../others/html/projek.html">Project</a>
+                <a href="../others/html/kontak.html">Contact</a>
             </div>
             
             <div class="col-link">
