--- a/others/html/projek.html
+++ b/others/html/projek.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="/images/sans-logo.png">
-    <link rel="icon" href="/images/sans-logo.png" type="image/png"> 
+    <meta property="og:image" content="../images/sans-logo.png">
+    <link rel="icon" href="../images/sans-logo.png" type="image/png"> 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/others/css/main.css">
-    <link rel="stylesheet" href="/others/css/projek.css">
+    <link rel="stylesheet" href="../others/css/main.css">
+    <link rel="stylesheet" href="../others/css/projek.css">
     <title>Document</title>
 </head>
 <body>
     <div class="navbar">
         <h2>Musyaravul Anam</h2>
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/others/html/sertif.html">Certification</a></li>
-            <li><a href="/others/html/projek.html">Project</a></li>
-            <li><a href="/others/html/kontak.html">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../others/html/sertif.html">Certification</a></li>
+            <li><a href="../others/html/projek.html">Project</a></li>
+            <li><a href="../others/html/kontak.html">Contact</a></li>
         </ul>
         <button class="rekrut">Rekrut Saya</button>
     </div>
@@ -32,42 +32,42 @@
             <section class="kategori">
                 <div class="kategori__projek">
                     <div class="kartu-projek">
-                        <img src="/others/assets/chess/chess-img.png" alt="Catur" class="kartu-projek__img">
+                        <img src="../others/assets/chess/chess-img.png" alt="Catur" class="kartu-projek__img">
                         <div class="kartu-projek__info">
                             <h5>Chess</h5>
                         </div>
                         <p class="kartu-projek__desc">Projek permainan catur melawan bot.</p>
-                        <a href="/others/assets/chess/index.html">
+                        <a href="../others/assets/chess/index.html">
                             <button class="btn">Coba</button>
                         </a>
                     </div>
                     <div class="kartu-projek">
-                        <img src="/others/assets/weather/weather-img.png" alt="Cuaca" class="kartu-projek__img">
+                        <img src="../others/assets/weather/weather-img.png" alt="Cuaca" class="kartu-projek__img">
                         <div class="kartu-projek__info">
                             <h5>Weather App</h5>
                         </div>
                         <p class="kartu-projek__desc">Aplikasi cuaca yang disederhanakan.</p>
-                        <a href="/others/assets/weather/index.html">
+                        <a href="../others/assets/weather/index.html">
                             <button class="btn">Coba</button>
                         </a>
                     </div>
                     <div class="kartu-projek">
-                        <img src="/others/assets/text-encrypt/encrypt-img.png" alt="Encryptor" class="kartu-projek__img">
+                        <img src="../others/assets/text-encrypt/encrypt-img.png" alt="Encryptor" class="kartu-projek__img">
                         <div class="kartu-projek__info">
                             <h5>Encryptor Text</h5>
                         </div>
                         <p class="kartu-projek__desc">Website untuk mengubah kalimat menjadi kode rahasia.</p>
-                        <a href="/others/assets/text-encrypt/index.html">
+                        <a href="../others/assets/text-encrypt/index.html">
                             <button class="btn">Coba</button>
                         </a>
                     </div>
                     <div class="kartu-projek">
-                        <img src="/others/assets/url-shortner/shortner-img.png" alt="Shortner" class="kartu-projek__img">
+                        <img src="../others/assets/url-shortner/shortner-img.png" alt="Shortner" class="kartu-projek__img">
                         <div class="kartu-projek__info">
                             <h5>URL Shortner</h5>
                         </div>
                         <p class="kartu-projek__desc">Mengubah link yang panjang menjadi lebih pendek.</p>
-                        <a href="/others/assets/url-shortner/index.html">
+                        <a href="../others/assets/url-shortner/index.html">
                             <button class="btn">Coba</button>
                         </a>
                     </div>
@@ -100,10 +100,10 @@
 
             <div class="col-link">
                 <h4>Useful Links</h4>
-                <a href="/index.html">Home</a>
-                <a href="/others/html/sertif.html">Certification</a>
-                <a href="/others/html/projek.html">Project</a>
-                <a href="/others/html/kontak.html">Contact</a>
+                <a href="../index.html">Home</a>
+                <a href="../others/html/sertif.html">Certification</a>
+                <a href="../others/html/projek.html">Project</a>
+                <a href="../others/html/kontak.html">Contact</a>
             </div>
             
             <div class="col-link">
