Changes to be committed: 	modified:   others/css/projek.css 	modified:   others/html/projek.html

--- a/others/html/projek.html
+++ b/others/html/projek.html
@@ -37,6 +37,7 @@
                             <h5>Chess</h5>
                         </div>
                         <p class="kartu-projek__desc">Projek permainan catur melawan bot.</p>
+                        <p class="kartu-projek__comp">Compatible for: <span>desktop</span></p>
                         <a href="../assets/chess/index.html">
                             <button class="btn">Coba</button>
                         </a>
@@ -47,6 +48,7 @@
                             <h5>Weather App</h5>
                         </div>
                         <p class="kartu-projek__desc">Aplikasi cuaca yang disederhanakan.</p>
+                        <p class="kartu-projek__comp">Compatible for: <span>desktop</span></p>
                         <a href="../assets/weather/index.html">
                             <button class="btn">Coba</button>
                         </a>
@@ -57,6 +59,7 @@
                             <h5>Encryptor Text</h5>
                         </div>
                         <p class="kartu-projek__desc">Website untuk mengubah kalimat menjadi kode rahasia.</p>
+                        <p class="kartu-projek__comp">Compatible for: <span>desktop, mobile</span></p>
                         <a href="../assets/text-encrypt/index.html">
                             <button class="btn">Coba</button>
                         </a>
@@ -67,6 +70,7 @@
                             <h5>URL Shortner</h5>
                         </div>
                         <p class="kartu-projek__desc">Mengubah link yang panjang menjadi lebih pendek.</p>
+                        <p class="kartu-projek__comp">Compatible for: <span>desktop</span></p>
                         <a href="../assets/url-shortner/index.html">
                             <button class="btn">Coba</button>
                         </a>
